--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "check-types": "vue-tsc -b",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,5 +18,6 @@
     "typescript": "~5.6.2",
     "vite": "^5.4.9",
     "vue-tsc": "^2.1.6"
-  }
+  },
+  "packageManager": "pnpm@9.10.0"
 }
