--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,19 @@
     "dev": "vite",
     "check-types": "vue-tsc -b",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "prettier --write src"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.5",
+    "@tiptap/pm": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
+    "@tiptap/vue-3": "^2.9.1",
+    "autoprefixer": "^10.4.20",
     "dev": "^0.1.3",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.14",
     "vue": "^3.5.12"
   },
   "devDependencies": {
