--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ fastapi = {extras = ["standard"], version = "^0.115.3"}
 mangum = "^0.19.0"
 jinja2 = "^3.1.4"
 markupsafe = "^3.0.2"
+pynamodb = "^6.0.1"
+boto3 = "^1.35.54"
 
 
 [build-system]
