--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@tiptap/pm": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
     "@tiptap/vue-3": "^2.9.1",
+    "@types/node": "^22.9.0",
     "autoprefixer": "^10.4.20",
     "dev": "^0.1.3",
     "postcss": "^8.4.47",
